# mq_elixir

./: .gitignore  CHANGELOG.md  README.md  mix.exs  test_format.exs
.github/workflows/: ci.yml
lib/: mq.ex
lib/mq/: conversion_options.ex  input_format.ex  native.ex  options.ex  result.ex
native/mq_nif/: Cargo.toml
native/mq_nif/src/: atoms.rs  lib.rs  result.rs  value.rs
test/: mq_test.exs
