[package]
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
description = "Elixir NIF bindings for mq Markdown processing"
edition = "2024"
license = "MIT"
name = "mq_nif"
version = "0.1.3"

[lib]
crate-type = ["cdylib"]
name = "mq_nif"

[dependencies]
mq-lang = {version = "0.5.15"}
mq-markdown = {version = "0.5.15"}
rustler = "0.37.0"

[profile.release]
codegen-units = 1
lto = true
